--- a/Assets/Plugins/Unity.Plugin.asmdef
+++ b/Assets/Plugins/Unity.Plugin.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "Unity.Plugin",
-    "references": [],
+    "references": [
+        "GUID:7a1fa966b0ea23f40a6a4dc4dab1e297"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
