--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -47,6 +47,7 @@
   <PropertyGroup>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <UnityProjectGenerator>Package</UnityProjectGenerator>
+    <UnityProjectGeneratorVersion>2.0.3</UnityProjectGeneratorVersion>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2020.1.8f1c1</UnityVersion>
@@ -59,10 +60,12 @@
     <Compile Include="Assets\Scripts\Tool\OpenFileName.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Panel\View\IView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\File\FileUtil.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\AStar\AStarNodeData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Init\Init.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Panel\PanelType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Pool\Pool.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Directory\DirectoryUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Scene\SceneLoadManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ClientNetwork\SocketModel.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ILRuntime\ILRuntimeManager.cs" />
@@ -71,13 +74,17 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\EventHandlerAttribute.cs" />
     <Compile Include="Assets\Scripts\Tool\DelayDestroy.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Handler\Panel\PanelObjectBaseHandler.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Transform\TransformExpand.cs" />
     <Compile Include="Assets\Scripts\Tool\LongClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Panel\PanelData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Handler\ObjectBase\ObjectBaseHandler.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Mono\MonoManager.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\Tips\Tips.cs" />
     <Compile Include="Assets\Scripts\Tool\Drag.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Path\PathType.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\MD5\MD5Util.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\EventManager.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Pool\Tips\TipsPool.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\Singleton.cs" />
@@ -85,27 +92,26 @@
     <Compile Include="Assets\Scripts\Module\Core\Manager\Tips\TipsManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ClientNetwork\ICenterHandler.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\EventHandler\LaunchEventHandler.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Init\InitEventHandler.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonMockWrapper.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Panel\PanelState.cs" />
     <Compile Include="Assets\Scripts\Tool\Delay.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Panel\PanelBase.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\TipsWindow\TipsWindow.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonReader.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Path\PathUtil.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\ViewModel\LaunchModel.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonException.cs" />
     <Compile Include="Assets\Scripts\Tool\EnterClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Panel\DataBinder\Binding.cs" />
-    <Compile Include="Assets\Scripts\LitJson\ParserToken.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Rijndael\RijndaelUtil.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\String\StringExpand.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\TipsWindow\TipsWindowManager.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Web\WebUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\AUIEvent.cs" />
     <Compile Include="Assets\Scripts\Tool\RightClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Panel\View\ViewBase.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Encoding\EncodingUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Asset\AssetType.cs" />
     <Compile Include="Assets\Scripts\Tool\DisplayMode.cs" />
-    <Compile Include="Assets\Scripts\LitJson\IJsonWrapper.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Pool\TipsWindow\TipsWindowPool.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Lcc\LccUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\AEvent.cs" />
@@ -117,32 +123,18 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Panel\PanelManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\UIEvent\UIEventType.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonMapper.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Vector2\Vector2Expand.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\Objects.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Image\ImageExpand.cs" />
     <Compile Include="Assets\Scripts\Tool\LocalDialog.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Scene\SceneName.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\AStar\AStarManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Event\EventType.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Panel\DataBinder\DataBinder.cs" />
-    <Compile Include="Assets\Scripts\LitJson\Lexer.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\View\LaunchPanel.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Asset\AssetManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Asset\AssetData.cs" />
-    <Compile Include="Assets\Scripts\LitJson\JsonWriter.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\ObjectBase.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\Directory\DirectoryUtil.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\File\FileUtil.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\MD5\MD5Util.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\Path\PathUtil.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\Rijndael\RijndaelUtil.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Util\Web\WebUtil.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\String\StringExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Image\ImageExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Vector2\Vector2Expand.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Expand\Transform\TransformExpand.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Scripts\Unity.Model.asmdef" />
@@ -348,13 +340,13 @@
       <HintPath>C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Editor\SyntaxTree.VisualStudio.Unity.Bridge.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntim.Mono.Cecil">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.4\Plugins\ILRuntim.Mono.Cecil.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntim.Mono.Cecil.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Mdb">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.4\Plugins\ILRuntime.Mono.Cecil.Mdb.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntime.Mono.Cecil.Mdb.dll</HintPath>
     </Reference>
     <Reference Include="ILRuntime.Mono.Cecil.Pdb">
-      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.4\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
+      <HintPath>Library\PackageCache\com.ourpalm.ilruntime@1.6.5\Plugins\ILRuntime.Mono.Cecil.Pdb.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>C:\Program Files\2020.1.8f1c1\Editor\Data\MonoBleedingEdge\lib\mono\4.7.1-api\mscorlib.dll</HintPath>
@@ -712,6 +704,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="Unity.Plugin.csproj">
+      <Project>{5EA2499E-1565-15A6-B023-5851A150FF4C}</Project>
+      <Name>Unity.Plugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
