--- a/Unity.Plugin.csproj
+++ b/Unity.Plugin.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{8543BC6F-FEC6-BDFC-0BD5-AB0B4E96C57B}</ProjectGuid>
+    <ProjectGuid>{5EA2499E-1565-15A6-B023-5851A150FF4C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Unity.Hotfix</AssemblyName>
+    <AssemblyName>Unity.Plugin</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -56,90 +56,18 @@
     <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Hotfix\Runtime\Core\Panel\DataBinder\DataBinder.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Camera\SmoothFoolow2D.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventHandlerAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Command\CommandType.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Language\LanguageManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Handler\Panel\PanelObjectBaseHandler.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\String\StringExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\UIEvent\UIEventType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\IEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Web\WebUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Vector2\Vector2Expand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Config\User\LanguageType.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserSetDataInstance.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Character\CharacterManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelData.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Video\VideoManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Path\PathUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Directory\DirectoryUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Timer\TimerManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\DataList.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\Singleton.cs" />
-    <Compile Include="Assets\Hotfix\Module\Config\Command\CommandDataType.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Camera\SmoothFoolow3D.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Init\Init.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\Event\EventType.cs" />
-    <Compile Include="Assets\Hotfix\Module\Config\GameEvent\GameEventType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Panel\ViewModel\ViewModelBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelBase.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\UserSetData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelState.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\GameData\GameDataManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserDataInstance.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Joystack\Joystack.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Path\PathType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\UserData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Panel\View\IView.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\AUIEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\Asset\AssetType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Panel\View\ViewBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\ObjectBase.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Audio\AudioManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Transform\TransformExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Init\InitEventHandler.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\User\DisplayModeType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\File\FileUtil.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Voice\VoiceManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Config\User\CVType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\Scene\SceneName.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\View\LoadPanel.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Util\User\DataListInstance.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\View\LoginPanel.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\ViewModel\LoadModel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\MD5\MD5Util.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\EventHandler\LoadEventHandler.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Pool\Pool.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Rijndael\RijndaelUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\AEvent.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\IUIEvent.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\EventHandler\LoginEventHandler.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Config\Panel\PanelType.cs" />
-    <Compile Include="Assets\Hotfix\Module\Config\User\ResolutionType.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Handler\ObjectBase\ObjectBaseHandler.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\GameEvent\GameEventManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Panel\DataBinder\Binding.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Command\CommandManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Util\Lcc\LccUtil.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Image\ImageExpand.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\GameTime\GameTimeManager.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Timer\TimerData.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\ViewModel\LoginModel.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\LccViewFactory.cs" />
-    <Compile Include="Assets\Hotfix\Module\Core\Manager\Command\CommandData.cs" />
+    <Compile Include="Assets\Plugins\LitJson\Lexer.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonMapper.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonReader.cs" />
+    <Compile Include="Assets\Plugins\LitJson\ParserToken.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonException.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonData.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonMockWrapper.cs" />
+    <Compile Include="Assets\Plugins\LitJson\IJsonWrapper.cs" />
+    <Compile Include="Assets\Plugins\LitJson\JsonWriter.cs" />
   </ItemGroup>
   <ItemGroup>
-     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
+     <None Include="Assets\Plugins\Unity.Plugin.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\2020.1.8f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -706,14 +634,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Unity.Plugin.csproj">
-      <Project>{5EA2499E-1565-15A6-B023-5851A150FF4C}</Project>
-      <Name>Unity.Plugin</Name>
-    </ProjectReference>
-    <ProjectReference Include="Unity.Model.csproj">
-      <Project>{57D111B4-22B4-6CA1-C350-5090EBF41DC0}</Project>
-      <Name>Unity.Model</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
