--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\IEvent.cs" />
     <Compile Include="Assets\Scripts\Tool\OpenFileName.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Panel\View\IView.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\View\IView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\File\FileUtil.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\AStar\AStarNodeData.cs" />
@@ -101,14 +101,14 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Path\PathUtil.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\ViewModel\LaunchModel.cs" />
     <Compile Include="Assets\Scripts\Tool\EnterClickButton.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Panel\DataBinder\Binding.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\DataBinder\Binding.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Rijndael\RijndaelUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Expand\String\StringExpand.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\TipsWindow\TipsWindowManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Web\WebUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\AUIEvent.cs" />
     <Compile Include="Assets\Scripts\Tool\RightClickButton.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Panel\View\ViewBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\View\ViewBase.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Util\Encoding\EncodingUtil.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Asset\AssetType.cs" />
     <Compile Include="Assets\Scripts\Tool\DisplayMode.cs" />
@@ -117,7 +117,7 @@
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Event\AEvent.cs" />
     <Compile Include="Assets\Scripts\Tool\DoubleClickButton.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\LccViewFactory.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Panel\ViewModel\ViewModelBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\ViewModel\ViewModelBase.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\LccView.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\ClientNetwork\ClientNetworkManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
@@ -130,11 +130,14 @@
     <Compile Include="Assets\Scripts\Runtime\Config\Scene\SceneName.cs" />
     <Compile Include="Assets\Scripts\Module\Core\Manager\AStar\AStarManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Config\Event\EventType.cs" />
-    <Compile Include="Assets\Scripts\Runtime\Core\Panel\DataBinder\DataBinder.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\View\DataBinder\DataBinder.cs" />
     <Compile Include="Assets\Scripts\Logic\UI\Panel\Launch\View\LaunchPanel.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Asset\AssetManager.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Manager\Asset\AssetData.cs" />
     <Compile Include="Assets\Scripts\Runtime\Core\Object\ObjectBase.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Expand\ObjectBase\ObjectBaseExpand.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Core\Util\Id\IdUtil.cs" />
+    <Compile Include="Assets\Scripts\Runtime\Config\Item\ItemType.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Scripts\Unity.Model.asmdef" />
