--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -68,17 +68,20 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\IEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Web\WebUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Vector2\Vector2Expand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\GameObject\GameObjectExpand.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ObjectBase\ObjectBaseExpand.cs" />
     <Compile Include="Assets\Hotfix\Module\Config\User\LanguageType.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserSetDataInstance.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ItemType\ItemTypeExpand.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Character\CharacterManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelData.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Video\VideoManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Path\PathUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Directory\DirectoryUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\SpriteRenderer\SpriteRendererExpand.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemBase.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Timer\TimerManager.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\User\DataList.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Singleton.cs" />
@@ -99,18 +102,20 @@
     <Compile Include="Assets\Hotfix\Module\Core\Util\User\UserDataInstance.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\PanelType\PanelTypeExpand.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Joystack\Joystack.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemView.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Path\PathType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Manager\Manager.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\User\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\View\IView.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\AUIEvent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Asset\AssetType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\View\ViewBase.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\ObjectBase.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemData.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\Transform\TransformExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Init\InitEventHandler.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Init\EventHandler\InitEventHandler.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\User\DisplayModeType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\File\FileUtil.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Voice\VoiceManager.cs" />
@@ -119,16 +124,18 @@
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\View\LoadPanel.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Util\User\DataListInstance.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\View\LoginPanel.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelView.cs" />
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\ViewModel\LoadModel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\MD5\MD5Util.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\EventHandler\LoadEventHandler.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Load\UIEventHandler\LoadUIEventHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Pool\Pool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Rijndael\RijndaelUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\AEvent.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\IUIEvent.cs" />
-    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\EventHandler\LoginEventHandler.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\UIEventHandler\LoginUIEventHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Config\Panel\PanelType.cs" />
     <Compile Include="Assets\Hotfix\Module\Config\User\ResolutionType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Handler\Item\ItemObjectBaseHandler.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Handler\ObjectBase\ObjectBaseHandler.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\GameEvent\GameEventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\DataBinder\Binding.cs" />
@@ -140,13 +147,6 @@
     <Compile Include="Assets\Hotfix\Logic\UI\Panel\Login\ViewModel\LoginModel.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\LccViewFactory.cs" />
     <Compile Include="Assets\Hotfix\Module\Core\Manager\Command\CommandData.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelView.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Expand\ItemType\ItemTypeExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Handler\Item\ItemObjectBaseHandler.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemView.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemManager.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Item\ItemData.cs" />
   </ItemGroup>
   <ItemGroup>
      <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
